--- a/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/WashTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/WashTest.cshtml
@@ -270,7 +270,7 @@
                                                     styleColor = "red";
                                                 }
                                             }
-                                            <font color="@styleColor">@Html.DisplayFor(o => o.Wash_Main.Wash)</font>
+                                            <font class="@styleColor">@Html.DisplayFor(o => o.Wash_Main.Wash)</font>
                                         </td>
                                         <td><h5>Last Inspeciton Date</h5></td>
                                         <td>
@@ -410,7 +410,7 @@
                                                 styleColor = "red";
                                             }
                                         }
-                                        <select id="Wash_Main_@{@i}_Result" class="resultList" name="Wash_Detail[@i].Result" disabled="disabled" style="width:157px;color:@styleColor" onchange="changeResultColor(this)">
+                                        <select id="Wash_Main_@{@i}_Result" class="resultList" name="Wash_Detail[@i].Result" disabled="disabled" class="@styleColor" style="width:157px;" onchange="changeResultColor(this)">
                                             @foreach (var item in (List<SelectListItem>)ViewBag.ResultList)
                                             {
                                                 string selected = item.Text.Equals(Model.Wash_Detail[i].Result) ? "selected" : "";
@@ -872,10 +872,10 @@
     function changeResultColor(obj) {
         var result = $(obj).val();
         if (result == "Pass") {
-            $(obj).css('color', 'blue');
+            $(obj).removeClass('red').addClass('blue');
         }
         else {
-            $(obj).css('color', 'red');
+            $(obj).removeClass('blue').addClass('red');
         }
     }
 
