--- a/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/CrockingTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/CrockingTest.cshtml
@@ -291,7 +291,7 @@
                                                     styleColor = "red";
                                                 }
                                             }
-                                            <font color="@styleColor">@Html.DisplayFor(o => o.Crocking_Main.Crocking)</font>
+                                            <font class="@styleColor">@Html.DisplayFor(o => o.Crocking_Main.Crocking)</font>
                                         </td>
                                         <td><h5>Last Inspeciton Date</h5></td>
                                         <td>
@@ -409,7 +409,7 @@
                                                     styleColor = "red";
                                                 }
                                             }
-                                            @Html.TextBoxFor(modelItem => Model.Crocking_Detail[i].Result, new { @readonly = "readonly", @style = "color:" + styleColor })
+                                            @Html.TextBoxFor(modelItem => Model.Crocking_Detail[i].Result, new { @readonly = "readonly", @class = styleColor })
                                         </td>
                                         <td style="color:red">
                                             <select id="Crocking_Detail_@{@i}__DryScale" name="Crocking_Detail[@i].DryScale" disabled="disabled" style="width:157px">
@@ -431,7 +431,7 @@
                                                     styleColor = "red";
                                                 }
                                             }
-                                            <select class="resultList result@{@i}" id="Crocking_Detail_@{@i}__ResultDry" name="Crocking_Detail[@i].ResultDry" disabled="disabled" style="width:157px;color:@styleColor" onchange="changeResultColor(this)">
+                                            <select class="resultList result@{@i}" id="Crocking_Detail_@{@i}__ResultDry" name="Crocking_Detail[@i].ResultDry" class="@styleColor" disabled="disabled" style="width:157px;" onchange="changeResultColor(this)">
                                                 @foreach (var item in (List<SelectListItem>)ViewBag.ResultList)
                                                 {
                                                     string selected = item.Text.Equals(Model.Crocking_Detail[i].ResultDry) ? "selected" : "";
@@ -459,7 +459,7 @@
                                                     styleColor = "red";
                                                 }
                                             }
-                                            <select class="resultList result@{@i}" id="Crocking_Detail_@{@i}__ResultDry_Weft" name="Crocking_Detail[@i].ResultDry_Weft" disabled="disabled" style="width:157px;color:@styleColor" onchange="changeResultColor(this)">
+                                            <select class="resultList result@{@i}" id="Crocking_Detail_@{@i}__ResultDry_Weft" name="Crocking_Detail[@i].ResultDry_Weft" class="@styleColor" disabled="disabled" style="width:157px;" onchange="changeResultColor(this)">
                                                 @foreach (var item in (List<SelectListItem>)ViewBag.ResultList)
                                                 {
                                                     string selected = item.Text.Equals(Model.Crocking_Detail[i].ResultDry_Weft) ? "selected" : "";
@@ -487,7 +487,7 @@
                                                     styleColor = "red";
                                                 }
                                             }
-                                            <select class="resultList result@{@i}" id="Crocking_Detail__@{@i}__ResultWet" name="Crocking_Detail[@i].ResultWet" disabled="disabled" style="width:157px;color:@styleColor" onchange="changeResultColor(this)">
+                                            <select class="resultList result@{@i}" id="Crocking_Detail__@{@i}__ResultWet" name="Crocking_Detail[@i].ResultWet" disabled="disabled" class="@styleColor" style="width:157px;" onchange="changeResultColor(this)">
                                                 @foreach (var item in (List<SelectListItem>)ViewBag.ResultList)
                                                 {
                                                     string selected = item.Text.Equals(Model.Crocking_Detail[i].ResultWet) ? "selected" : "";
@@ -515,7 +515,7 @@
                                                     styleColor = "red";
                                                 }
                                             }
-                                            <select class="resultList result@{@i}" id="Crocking_Detail_@{@i}__ResultWet_Weft" name="Crocking_Detail[@i].ResultWet_Weft" disabled="disabled" style="width:157px;color:@styleColor" onchange="changeResultColor(this)">
+                                            <select class="resultList result@{@i}" id="Crocking_Detail_@{@i}__ResultWet_Weft" name="Crocking_Detail[@i].ResultWet_Weft" disabled="disabled" class="@styleColor" style="width:157px;" onchange="changeResultColor(this)">
                                                 @foreach (var item in (List<SelectListItem>)ViewBag.ResultList)
                                                 {
                                                     string selected = item.Text.Equals(Model.Crocking_Detail[i].ResultWet_Weft) ? "selected" : "";
@@ -876,11 +876,12 @@
 
     function changeResultColor(obj) {
         var result = $(obj).val();
+        $(obj).removeClass('blue').removeClass('red');
         if (result == "Pass") {
-            $(obj).css('color', 'blue');
+            $(obj).addClass('blue');
         }
         else {
-            $(obj).css('color', 'red');
+            $(obj).addClass('red');
         }
 
         // checkAllResult
@@ -909,10 +910,10 @@
         var resultItem = $("#Crocking_Detail_" + idx + "__Result");
 
         if (result) {
-            resultItem.val("Pass").css("color", "blue");
+            resultItem.val("Pass").removeClass('red').addClass("blue");
         }
         else {
-            resultItem.val("Fail").css("color", "red");
+            resultItem.val("Fail").removeClass('blue').addClass("red");
         }
     }
 
