--- a/Quality/Quality/Areas/StyleManagement/Views/StyleResult/_Tab4_Layout.cshtml
+++ b/Quality/Quality/Areas/StyleManagement/Views/StyleResult/_Tab4_Layout.cshtml
@@ -38,6 +38,7 @@
                     <td>@item.Article</td>
                     <td>@item.Type</td>
                     <td>@item.TestName</td>
+                    <td>@item.LastResult</td>
                     <td>@item.LastTestDate</td>
                 </tr>
             }
