--- a/Quality/Quality/Areas/StyleManagement/Views/StyleResult/_Tab3_Layout.cshtml
+++ b/Quality/Quality/Areas/StyleManagement/Views/StyleResult/_Tab3_Layout.cshtml
@@ -26,7 +26,9 @@
 
 <div class="margin-c" style="padding:10px 10px 10px 10px;">
     <div style="display:inline-block;width:100%;padding:5px 5px 5px 5px;color:white;">
-        <input type="button" class="btn-gy" id="RRLRReport" name="name" value="RR/LR Report" />
+        <a href="@Url.Action("DownloadRRLRFile", new { FilePath = Model.StyleRRLRPath, BrandID = Model.BrandID,SeasonID = Model.SeasonID,StyleID = Model.StyleID })">
+            <input type="button" class="btn-gy" id="RRLRReport" name="name" value="RR/LR Report" />
+        </a>
     </div>
     <div style="display:inline-block;width:100%">
 
