CFT Comments修復、Style Result初版完成

--- a/Quality/Quality/Areas/SampleRFT/Views/CFTComments/Index.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/CFTComments/Index.cshtml
@@ -183,7 +183,7 @@
                                         @Html.DisplayFor(modelItem => item.CommentsCategory)
                                     </td>
                                     <td>
-                                        @Html.DisplayFor(modelItem => item.Comnments)
+                                        @Html.Raw(item.Comnments)
                                     </td>
                                 </tr>
                             }
