ISP20211063 - Mockup Crocking 合併

--- a/Quality/Quality/Areas/BulkFGT/Views/MockupCrocking/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/MockupCrocking/Index.cshtml
@@ -429,6 +429,7 @@
                                         <div class="input-group">
                                             @Html.HiddenFor(modelItem => Model.MockupCrocking_Detail[i].ArtworkColor, new { @class = "AFColor" })
                                             @Html.TextBoxFor(modelItem => Model.MockupCrocking_Detail[i].ArtworkColorName, new { @class= "AFColor", @readonly = "readonly" })
+                                            @Html.HiddenFor(modelItem => Model.MockupCrocking_Detail[i].Ukey)
                                             <input type="button" class="site-btn btn-blue btnArtworkColorItem" style="margin:0;border:0;" value="..." />
                                         </div>
                                     </td>
